--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.18.0",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.11.5"
+    "pg": "^8.11.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "dotenv": "^16.4.5"
