--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
     "pg": "^8.11.5",
+    "react-social-login-buttons": "^4.1.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
