--- a/view/package.json
+++ b/view/package.json
@@ -32,6 +32,8 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.6",
+    "react-social-login-buttons": "^4.1.0",
+    "reactjs-social-login": "^2.6.3",
     "redux": "^5.0.1",
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
