--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-flash": "^0.0.2",
@@ -22,6 +23,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.11.5",
     "react-social-login-buttons": "^4.1.0",
+    "redis": "^4.7.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
