--- a/view/package.json
+++ b/view/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.2.19",
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
+    "framer-motion": "^12.0.6",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-circular-progressbar": "^2.1.0",
@@ -35,7 +36,6 @@
     "react-social-login-buttons": "^4.1.0",
     "reactjs-social-login": "^2.6.3",
     "redux": "^5.0.1",
-    "typescript": "^4.9.5",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -68,6 +68,7 @@
     "@types/react-datepicker": "^6.0.1",
     "@types/react-helmet": "^6.1.11",
     "@types/react-slider": "^1.3.6",
-    "@types/uuid": "^9.0.8"
+    "@types/uuid": "^9.0.8",
+    "typescript": "^5.7.3"
   }
 }
