--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.18.1",
     "memorystore": "^1.6.7",
+    "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
